--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ../.
+      - uses: ./
+        working-directory: ./
