--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: LeandroLS/linksnitch@main
         with:
-          allowedStatusCodes: '["200", "201"]'
+          allowedStatusCodes: '[200]'
