--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,15 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+    
+    - name: Go mod init
+      run: go mod init
 
-    - name: Set module
-      run: go mod init github.com/LeandroLS/linksnitch
-
-    - name: Build
-      run: go build -v ./...
+    - name: Go get
+      run: go get -d -v ./...
+    
+    - name: Go install
+      run: go install -v ./...
 
     - name: Test
       run: go test -v ./...
