--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Go mod init
-      run: go mod init github.com/LeandroLS/linksnitch
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+
+    - name: Go mod init
+      run: go mod init github.com/LeandroLS/linksnitch
+   
+    - name: Go get
+      run: go get -d -v ./...
 
     - name: Build
       run: go build -v ./...
