--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,14 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: 1.16
 
     - name: Go mod init
       run: go mod init github.com/LeandroLS/linksnitch
    
+    - name: Go get
+      run: go mod tidy
+      
     - name: Go get
       run: go get -d -v ./...
 
